--- a/Counter-React/src/components/Styles/Header.css
+++ b/Counter-React/src/components/Styles/Header.css
@@ -1,6 +1,6 @@
   /* Header styles */
   h1 {
-    color: #C9FC33;
+    color: #ffffff;
     text-align: center;
     font-weight: bold;
     font-size: 4.5rem;
