--- a/Counter-React/src/components/Styles/Style.css
+++ b/Counter-React/src/components/Styles/Style.css
@@ -1,5 +1,6 @@
-*{
-  background-color: #0D0E12;
+body{
+  background-image: url("https://w0.peakpx.com/wallpaper/105/761/HD-wallpaper-twisted-color-gradient-background.jpg");
+  background-size: cover;
   overflow-y: hidden;
   font-family: 'IBM Plex Sans', sans-serif;
 }
@@ -10,6 +11,19 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+}
+
+.ContainerApp{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background:rgba(255, 255, 255, 0.038); 
+  backdrop-filter: blur(10px); 
+  width: 50%; 
+  height: 60%;
+  border-radius: 60px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .ButtonsDiv {
